# apple-notes-mcp

./: CLAUDE.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
docs/: logging.md  tools.md
skills/apple-notes/: SKILL.md
src/: apple_notes_mcp.rs  cli.rs  log.rs  main.rs  mcp.rs  models.rs  notes.rs
src/mcp/: apple_notes_mcp.rs  delete_scope.rs  mod.rs  read_scope.rs  server_handler.rs  write_scope.rs
src/notes/: api.rs  bridge.rs  debug_tests.rs  helpers.rs  mod.rs  types.rs
