[package]
name = "apple-notes-mcp"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Read and write Apple Notes from any MCP-compatible AI client"
homepage = "https://github.com/evg4b/apple-notes-mcp"
repository = "git@github.com:evg4b/apple-notes-mcp.git"
authors = ["Evgeny Abramovich"]
readme = "README.md"

[profile.release]
opt-level = "z"        # optimise for size, not speed
lto = true             # cross-crate dead-code elimination
codegen-units = 1      # single unit lets LLVM see the whole program
panic = "abort"        # drop unwinding tables (~50-100 KB)
strip = true           # remove symbol table and debug info

[dependencies]
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
rmcp = { version = "1.4.0", features = ["transport-io"] }
tokio = { version = "1.52.0", features = ["macros", "rt-multi-thread"] }
objc2 = "0.6.4"
objc2-foundation = "0.3.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.6.1", features = ["derive"] }
